--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,4 @@ add_matchable_test(max_variants)
 add_matchable_test(matchable)
 add_matchable_test(matchbox)
 add_matchable_test(getting_started)
+add_matchable_test(spread_matchable)
