--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,4 @@ add_matchable_test(matchable)
 add_matchable_test(matchbox)
 add_matchable_test(getting_started)
 add_matchable_test(spread_matchable)
+add_matchable_test(spreadx2_matchable)
