--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,3 +25,4 @@ add_matchable_test(matchable)
 add_matchable_test(matchbox)
 add_matchable_test(spread_matchable)
 add_matchable_test(spreadx2_matchable)
+add_matchable_test(spreadvectof_matchable)
