--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,3 +26,4 @@ add_matchable_test(matchbox)
 add_matchable_test(spread_matchable)
 add_matchable_test(spreadx2_matchable)
 add_matchable_test(spreadvectof_matchable)
+add_matchable_test(unmatchable)
