--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ add_matchable_test(max_variants)
 add_matchable_test(matchable)
 add_matchable_test(matchable_usage)
 add_matchable_test(matchbox)
+add_matchable_test(relationships)
 add_matchable_test(spread_matchable)
 add_matchable_test(spreadx2_matchable)
 add_matchable_test(spreadvectof_matchable)
