--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wextra")
 
 install(FILES src/matchable.h DESTINATION include)
+install(FILES src/matchable_fwd.h DESTINATION include)
 
 ####### test scripts  #######
 install(PROGRAMS scripts/run_all.sh DESTINATION test/bin/)
