--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,3 +31,4 @@ add_matchable_test(spread_matchable)
 add_matchable_test(spreadx2_matchable)
 add_matchable_test(spreadvectof_matchable)
 add_matchable_test(unmatchable)
+add_matchable_test(escapable)
