rename/delete test programs
  * renamed spread_matchable to cards
  * renamed spreadx2matchable to sorting
  * deleted spreadvectof_matchable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,13 +22,12 @@ function(add_matchable_test test_name)
     install(TARGETS ${test_name} RUNTIME DESTINATION test/programs)
 endfunction()
 
-add_matchable_test(max_variants)
+add_matchable_test(cards)
+add_matchable_test(escapable)
 add_matchable_test(matchable)
 add_matchable_test(matchable_usage)
 add_matchable_test(matchbox)
+add_matchable_test(max_variants)
 add_matchable_test(relationships)
-add_matchable_test(spread_matchable)
-add_matchable_test(spreadx2_matchable)
-add_matchable_test(spreadvectof_matchable)
+add_matchable_test(sorting)
 add_matchable_test(unmatchable)
-add_matchable_test(escapable)
