--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,7 @@ project(matchable)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wextra")
 
-install(FILES src/matchable.h DESTINATION include)
-install(FILES src/matchable_fwd.h DESTINATION include)
+install(DIRECTORY include/matchable DESTINATION include)
 
 ####### test scripts  #######
 install(PROGRAMS scripts/run_all.sh DESTINATION test/bin/)
@@ -17,7 +16,7 @@ install(PROGRAMS scripts/list.sh DESTINATION test/bin/)
 ####### test programs #######
 function(add_matchable_test test_name)
     add_executable(${test_name} test/programs/${test_name}.cpp)
-    target_include_directories(${test_name} PRIVATE src)
+    target_include_directories(${test_name} PRIVATE include)
     target_include_directories(${test_name} PRIVATE test/include)
     install(TARGETS ${test_name} RUNTIME DESTINATION test/programs)
 endfunction()
