finish renaming test, update readme

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ function(add_matchable_test test_name)
 endfunction()
 add_matchable_test(cards)
 add_matchable_test(escapable)
-add_matchable_test(exotic_spread)
+add_matchable_test(self_property)
 add_matchable_test(matchable)
 add_matchable_test(matchable_usage)
 add_matchable_test(matchbox)
