add ability to omit 'by index'
  * Normally two lists of variants are created, one for 'by index'
    and another for 'by string'.  For some use cases, the order in
    which the variants are defined is important, while for others
    it is not.  In all cases however, 'by string' is needed for the
    binary-search performed by from_string().  Support optimization
    by allowing omission of 'by index' for those cases that make
    use of 'by string' only.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,11 @@ cmake_minimum_required(VERSION 3.10)
 project(matchable VERSION 10.0.4)
 
 option(LIB_ONLY "Build library only (no tests/examples)" OFF)
+option(OMIT_BY_INDEX "Omit by index" OFF)
+
+if(OMIT_BY_INDEX)
+    add_definitions(-DMATCHABLE_OMIT_BY_INDEX)
+endif()
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
@@ -27,16 +32,18 @@ if(NOT LIB_ONLY)
         target_include_directories(${test_name} PUBLIC "${PROJECT_BINARY_DIR}")
         install(TARGETS ${test_name} RUNTIME DESTINATION share/matchable/test/programs)
     endfunction()
-    add_matchable_test(cards)
     add_matchable_test(escapable)
     add_matchable_test(self_property)
     add_matchable_test(matchable)
-    add_matchable_test(matchable_usage)
     add_matchable_test(matchbox)
-    add_matchable_test(max_variants)
-    add_matchable_test(relationships)
     add_matchable_test(sorting)
-    add_matchable_test(unmatchable)
+    if(NOT OMIT_BY_INDEX)
+        add_matchable_test(cards)
+        add_matchable_test(matchable_usage)
+        add_matchable_test(relationships)
+        add_matchable_test(max_variants)
+        add_matchable_test(unmatchable)
+    endif()
 endif()
 ############################################################################################################
 
