--- a/test_buildtimes/prepare/CMakeLists.txt
+++ b/test_buildtimes/prepare/CMakeLists.txt
@@ -2,6 +2,12 @@ cmake_minimum_required(VERSION 3.0)
 
 project(matchable_test_buildtimes)
 
+option(OMIT_BY_INDEX "Omit by index" OFF)
+
+if(OMIT_BY_INDEX)
+    add_definitions(-DMATCHABLE_OMIT_BY_INDEX)
+endif()
+
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wextra")
 
