--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ if(NOT LIB_ONLY)
     add_matchable_test(self_property)
     add_matchable_test(matchable)
     add_matchable_test(matchbox)
+    add_matchable_test(observer)
     add_matchable_test(sorting)
     add_matchable_test(property_matchable)
     if(NOT OMIT_BY_INDEX)
